--- a/Apps/Back/package.json
+++ b/Apps/Back/package.json
@@ -29,6 +29,7 @@
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/platform-express": "^11.0.1",
     "apollo-server-express": "^3.13.0",
+    "dotenv": "^17.2.3",
     "graphql": "^16.11.0",
     "graphql-tools": "^9.0.20",
     "nest-winston": "^1.10.2",
