--- a/Apps/Back/package.json
+++ b/Apps/Back/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --watch --webpack false",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "dev": "pnpm run start:dev"
+    "dev": "ts-node -r tsconfig-paths/register src/main.ts"
   },
   "dependencies": {
     "@apollo/server": "^5.0.0",
@@ -27,6 +27,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.2.0",
+    "@my-mlb/shared": "workspace:*",
     "@nestjs/platform-express": "^11.0.1",
     "apollo-server-express": "^3.13.0",
     "dotenv": "^17.2.3",
