--- a/Apps/Front/package.json
+++ b/Apps/Front/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "graphql": "^16.11.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-mlb-logos": "^1.1.2",
     "react-router-dom": "^7.9.4"
   },
