--- a/Apps/Front/package.json
+++ b/Apps/Front/package.json
@@ -19,10 +19,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-mlb-logos": "^1.1.2",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@graphql-codegen/cli": "6.0.1",
+    "@graphql-codegen/typescript": "5.0.2",
+    "@graphql-codegen/typescript-operations": "5.0.2",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
