--- a/Apps/Back/tsconfig.build.json
+++ b/Apps/Back/tsconfig.build.json
@@ -1,10 +1,24 @@
 {
-  "extends": "./tsconfig.json",
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "outDir": "./dist",
-    "rootDir": "src",
+    "rootDir": "./src",
+    "sourceMap": true,
     "declaration": true,
-    "sourceMap": true
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@my-mlb/shared": ["../../Packages/Shared/dist"],
+      "@my-mlb/shared/*": ["../../Packages/Shared/dist/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "test", "dist", "**/*.spec.ts"]
