--- a/Apps/Back/package.json
+++ b/Apps/Back/package.json
@@ -23,12 +23,13 @@
   "dependencies": {
     "@apollo/server": "^5.0.0",
     "@as-integrations/express5": "^1.1.2",
+    "@my-mlb/shared": "workspace:*",
     "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.2.0",
-    "@my-mlb/shared": "workspace:*",
     "@nestjs/platform-express": "^11.0.1",
+    "@prisma/client": "^6.18.0",
     "apollo-server-express": "^3.13.0",
     "dotenv": "^17.2.3",
     "graphql": "^16.11.0",
@@ -55,6 +56,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
+    "prisma": "^6.18.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
