:sparkles: inserted games of october into mongo collection

--- a/Apps/Back/package.json
+++ b/Apps/Back/package.json
@@ -26,14 +26,17 @@
     "@my-mlb/shared": "workspace:*",
     "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.2.0",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.18.0",
     "apollo-server-express": "^3.13.0",
     "dotenv": "^17.2.3",
     "graphql": "^16.11.0",
     "graphql-tools": "^9.0.20",
+    "mongoose": "^8.19.2",
     "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
