--- a/Apps/Back/package.json
+++ b/Apps/Back/package.json
@@ -31,6 +31,7 @@
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.1",
     "@prisma/client": "^6.18.0",
     "apollo-server-express": "^3.13.0",
     "dotenv": "^17.2.3",
@@ -38,6 +39,7 @@
     "graphql-tools": "^9.0.20",
     "mongoose": "^8.19.2",
     "nest-winston": "^1.10.2",
+    "node-cron": "^4.2.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "winston": "^3.18.3",
